root/argo-cd/apps/ingress-ha.yaml
# svc-ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8123
      protocol: TCP
  selector: {}  # Remove headless service spec.  Use selector instead
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha-service-deployment
  namespace: default
  labels:
    app: ha-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ha-service
  template:
    metadata:
      labels:
        app: ha-service
    spec:
      containers:
      - name: ha-service-container
        image: nginx:latest
        ports:
        - containerPort: 8123
        readinessProbe:
          httpGet:
            path: /
            port: 8123
        livenessProbe:
          httpGet:
            path: /
            port: 8123
---

# ingress-ha-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ha.yonor.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-service
                port:
                  number: 80
  tls:
  - hosts:
    - ha.yonor.me
    secretName: ha-service-tls
